@@ -1,3 +1,9 @@
+2008-07-20  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * src/spellcheck.c:
+   Remove temporary testing code.
+
+
 2008-07-16  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * src/spellcheck.c:
